--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
-WORDPRESS_DATABASE_HOST=mariadb
-WORDPRESS_DATABASE_USER=fran
-WORDPRESS_PASSWORD=
-WORDPRESS_DATABASE_NAME=bitnami_wordpress
-WORDPRESS_BLOG_NAME="Blog de Francisco"
-WORDPRESS_USERNAME=fran
-WORDPRESS_PASSWORD=bitnami
-WORDPRESS_EMAIL=demo@demo.es
+MYSQL_ROOT_PASSWORD=a
+WORDPRESS_DB_NAME=wordpress
+WORDPRESS_DB_USER=fran
+WORDPRESS_DB_PASSWORD=a
+
+WORDPRESS_DB_USER=fran
+WORDPRESS_DB_NAME=a
+WORDPRESS_DB_PASSWORD=a
+
 DOMAIN=docker-fms.zapto.org
